# marcellus

./: .editorconfig  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/capabilities/: default.json
apps/frontend/src-tauri/src/: lib.rs  main.rs
apps/frontend/src/__tests__/: circuitSolver.test.ts  drc.test.ts  drcStore.test.ts  geometryStore.test.ts  layoutHitTesting.test.ts  spiceParser.test.ts  toolStore.test.ts  workspaceStore.test.ts
apps/frontend/src/components/: LVSResultsPanel.tsx  VirtualList.tsx
apps/frontend/src/components/canvas/: LayoutCanvas.css  LayoutCanvas.tsx  SchematicCanvas.css  SchematicCanvas.tsx
apps/frontend/src/engines/: calculators.ts  canvasRenderer.ts  circuitSolver.ts  drc.ts  gateGen.ts  gitIntegration.ts  hdlCompletionProvider.ts  hdlElaborator.ts  hdlNavigator.ts  hdlParser.ts  layoutGenerator.ts  layoutGenerators.ts  lvs.ts  multiPdk.ts  netlist.ts  ngspiceEngine.ts  projectFileSystem.ts  rawParser.ts  ruleDeckParser.ts  schematicLayoutSync.ts  spatialIndex.ts  spiceParser.ts  transistorGen.ts  vcdParser.ts  webgpuRenderer.ts
apps/frontend/src/hooks/: useCommandRegistration.ts  useKeyboardShortcuts.ts  useLayoutInput.ts  useLayoutRenderer.ts  useLayoutViewport.ts  useToolShortcuts.ts
apps/frontend/src/ipc/: bridge.ts
apps/frontend/src/plugins/: eventBusWiring.ts  pluginApi.ts  sky130.ts  sky130CellLibrary.ts  types.ts
apps/frontend/src/stores/: advancedAnalysisStore.ts  aiAssistantStore.ts  boardStore.ts  buildTaskStore.ts  cellLibraryStore.ts  cellStore.ts  collaborationStore.ts  commandStore.ts  communityStore.ts  crossProbeStore.ts  diffStore.ts  drcStore.ts  educationStore.ts  fileExplorerStore.ts  geometryStore.ts  gitIntegrationStore.ts  hdlStore.ts  incrLvsStore.ts  keybindingStore.ts  layerStore.ts  layoutGenStore.ts  marketplaceStore.ts  monteCarloStore.ts  notificationStore.ts  outlineStore.ts  pluginStore.ts  problemsStore.ts  projectTemplateStore.ts  schematicStore.ts  searchStore.ts  serialStore.ts  settingsStore.ts  simStore.ts  snippetStore.ts  syncStore.ts  terminalStore.ts  themeStore.ts  toastStore.ts  toolStore.ts  vcsStore.ts  (+2 more)
apps/frontend/src/styles/: global.css
apps/frontend/src/utils/: gridSnap.ts  layoutHitTesting.ts  logger.ts
apps/frontend/src/workers/: circuitSolver.worker.ts  drc.worker.ts  lvs.worker.ts  netlist.worker.ts  workerPool.ts
crates/: Cargo.toml
crates/opensilicon-core/: Cargo.toml
crates/opensilicon-core/src/: cell.rs  commands.rs  database.rs  geometry.rs  layer.rs  lib.rs  spatial.rs
crates/opensilicon-drc/: Cargo.toml
crates/opensilicon-drc/src/: lib.rs  violation.rs
crates/opensilicon-io/: Cargo.toml
crates/opensilicon-io/src/: gds.rs  lib.rs  project.rs
crates/opensilicon-renderer/: Cargo.toml
crates/opensilicon-renderer/src/: lib.rs  render_data.rs  viewport.rs
(+113 files in other folders)
