[workspace]
members = [
    "opensilicon-core",
    "opensilicon-renderer",
    "opensilicon-drc",
    "opensilicon-io",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OpenSilicon Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rstar = "0.12"       # R-tree spatial index
uuid = { version = "1", features = ["v4", "serde"] }
