[package]
name = "opensilicon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core layout database, cell hierarchy, and geometry engine for OpenSilicon"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rstar = { workspace = true }
uuid = { workspace = true }
