[package]
name = "opensilicon-drc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Incremental DRC engine with YAML rule decks for OpenSilicon"

[dependencies]
opensilicon-core = { path = "../opensilicon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
