[package]
name = "opensilicon-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File I/O for GDS-II, OASIS, LEF/DEF, and OpenSilicon project format"

[dependencies]
opensilicon-core = { path = "../opensilicon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
