[package]
name = "opensilicon-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU-based rendering engine for OpenSilicon layout canvas"

[dependencies]
opensilicon-core = { path = "../opensilicon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
